--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -86,13 +86,15 @@
 
         <activity android:name=".activity.OrderActivity" />
         <activity android:name=".activity.OneTimeActivity">
+
+        </activity>
+        <activity android:name=".activity.ThreeActionActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.ThreeActionActivity"></activity>
     </application>
 
 </manifest>
