--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,7 @@ dependencies {
     implementation 'com.android.support:design:26.1.0'
     compile 'com.xhb:xbanner:1.2.2'
     compile 'com.nineoldandroids:library:2.4.0'
+    compile 'com.yancy.imageselector:imageselector:1.3.3'
     implementation 'com.jcodecraeer:xrecyclerview:1.3.2'
     implementation project(':slidingmenu')
 }
