--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,4 +75,5 @@ dependencies {
     compile 'com.yancy.imageselector:imageselector:1.3.3'
     implementation 'com.jcodecraeer:xrecyclerview:1.3.2'
     implementation project(':slidingmenu')
+    compile 'com.amap.api:location:latest.integration'
 }
