--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="test.bwei.com.platform">
+        package="test.bwei.com.platform">
 
     <uses-sdk android:minSdkVersion="8" />
 
@@ -48,6 +48,28 @@
         android:name="getui.permission.GetuiService.${applicationId}"
         android:protectionLevel="normal" />
 
+
+    <!--用于进行网络定位-->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission>
+    <!--用于访问GPS定位-->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
+    <!--用于获取运营商信息，用于支持提供运营商信息相关的接口-->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
+    <!--用于访问wifi网络信息，wifi信息会用于进行网络定位-->
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
+    <!--用于获取wifi的获取权限，wifi信息会用来进行网络定位-->
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"></uses-permission>
+    <!--用于访问网络，网络定位需要上网-->
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <!--用于读取手机当前的状态-->
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"></uses-permission>
+    <!--用于写入缓存数据到扩展存储卡-->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
+    <!--用于申请调用A-GPS模块-->
+    <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS"></uses-permission>
+    <!--用于申请获取蓝牙信息进行室内定位-->
+    <uses-permission android:name="android.permission.BLUETOOTH"></uses-permission>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"></uses-permission>
     <application
         android:name=".application"
         android:allowBackup="true"
@@ -66,6 +88,10 @@
             android:name="Mob-AppSecret"
             android:value="dfdce85ac0f749b107a5aac1400ec8fe" />
 
+
+        <meta-data android:name="com.amap.api.v2.apikey" android:value="c91bde22661acbe3c97ebed1d036fb40">//开发者申请的key
+
+        </meta-data>
         <activity android:name=".MainActivity" />
         <activity android:name=".activity.LandRActivity" />
         <activity android:name=".activity.StartActivity" />
@@ -94,7 +120,7 @@
         </activity>
         <activity android:name=".activity.EditContentActivity" />
         <activity android:name=".activity.DuanZiActivity"></activity>
-       
+        <service android:name="com.amap.api.location.APSService"></service>
     </application>
 
 </manifest>
