--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-
+apply plugin: 'com.jakewharton.butterknife'
 android {
     compileSdkVersion 26
     defaultConfig {
@@ -76,4 +76,10 @@ dependencies {
     implementation 'com.jcodecraeer:xrecyclerview:1.3.2'
     implementation project(':slidingmenu')
     compile 'com.amap.api:location:latest.integration'
+    compile 'com.jakewharton:butterknife:8.5.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
+
+
+
+
 }
