--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-        package="test.bwei.com.platform">
+        package="com.hxe.platform">
 
     <uses-sdk android:minSdkVersion="8" />
 
@@ -71,7 +71,7 @@
     <uses-permission android:name="android.permission.BLUETOOTH"></uses-permission>
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"></uses-permission>
     <application
-        android:name=".application"
+        android:name="test.bwei.com.platform.application"
         android:allowBackup="true"
         android:icon="@drawable/appicon"
         android:label="@string/app_name"
@@ -89,13 +89,13 @@
             android:value="dfdce85ac0f749b107a5aac1400ec8fe" />
 
 
-        <meta-data android:name="com.amap.api.v2.apikey" android:value="c91bde22661acbe3c97ebed1d036fb40">//开发者申请的key
+        <meta-data android:name="com.amap.api.v2.apikey" android:value="c91bde22661acbe3c97ebed1d036fb40">
 
         </meta-data>
-        <activity android:name=".MainActivity" />
-        <activity android:name=".activity.LandRActivity" />
-        <activity android:name=".activity.StartActivity" />
-        <activity android:name=".activity.ShowActivity" />
+        <activity android:name="test.bwei.com.platform.MainActivity" />
+        <activity android:name="test.bwei.com.platform.activity.LandRActivity" />
+        <activity android:name="test.bwei.com.platform.activity.StartActivity" />
+        <activity android:name="test.bwei.com.platform.activity.ShowActivity" />
         <activity
             android:name="com.mob.tools.MobUIShell"
             android:configChanges="keyboardHidden|orientation|screenSize"
@@ -103,23 +103,23 @@
             android:windowSoftInputMode="stateHidden|adjustResize" />
 
         <service
-            android:name=".GtService"
+            android:name="test.bwei.com.platform.GtService"
             android:exported="true"
             android:label="PushService"
             android:process=":pushservice" />
-        <service android:name=".IntentService" />
+        <service android:name="test.bwei.com.platform.IntentService" />
 
-        <activity android:name=".activity.OrderActivity" />
-        <activity android:name=".activity.OneTimeActivity" />
-        <activity android:name=".activity.ThreeActionActivity">
+        <activity android:name="test.bwei.com.platform.activity.OrderActivity" />
+        <activity android:name="test.bwei.com.platform.activity.OneTimeActivity" />
+        <activity android:name="test.bwei.com.platform.activity.ThreeActionActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.EditContentActivity" />
-        <activity android:name=".activity.DuanZiActivity"></activity>
+        <activity android:name="test.bwei.com.platform.activity.EditContentActivity" />
+        <activity android:name="test.bwei.com.platform.activity.DuanZiActivity"></activity>
         <service android:name="com.amap.api.location.APSService"></service>
     </application>
 
