--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,7 @@ android {
             abiFilters "armeabi", "armeabi-v7a", "x86_64"
         }
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -42,6 +43,8 @@ repositories {
         dirs 'libs' //就是你放aar的目录地址
     }
 }
+
+
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     //noinspection GradleCompatible
@@ -79,7 +82,15 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.5.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 
+    compile 'com.dou361.ijkplayer:jjdxm-ijkplayer:1.0.6'
+    // compile 'com.dou361.ijkplayer-armv7a:jjdxm-ijkplayer-armv7a:1.0.0'
+    compile 'com.dou361.ijkplayer-armv5:jjdxm-ijkplayer-armv5:1.0.0'
+    compile 'com.dou361.ijkplayer-arm64:jjdxm-ijkplayer-arm64:1.0.0'
+    compile 'com.dou361.ijkplayer-x86:jjdxm-ijkplayer-x86:1.0.0'
+    compile 'com.dou361.ijkplayer-x86_64:jjdxm-ijkplayer-x86_64:1.0.0'
 
+    compile 'com.github.LuckSiege.PictureSelector:picture_library:v2.1.7'
 
 
 }
+
